--- a/src/style/login.css
+++ b/src/style/login.css
@@ -33,6 +33,6 @@
     width: 100%;
 }
 .g-login .login-form-item {
-    margin-top: 15px;
-    margin-bottom: 10px;
+    margin-top: 15px !important;
+    margin-bottom: 10px !important;
 }
