--- a/src/style/main.css
+++ b/src/style/main.css
@@ -4,11 +4,15 @@
 }
 .g-body {
     padding:40px 15px;
+    padding-top: 20px;
 }
 .g-breadcrumb {
     height: 60px;
     padding: 15px 20px;
     width: 100%;
+}
+.logo {
+    height: 60px;
 }
 .g-card {
     position: relative;
@@ -22,8 +26,44 @@
     width: 60px;
     height: 60px;
 }
+.g-userinfo {
+    float: right;
+    width:70px;
+    margin-right: 40px;
+    height: 64px;
+    text-align: center;
+    cursor: pointer;
+}
+.g-userlog {
+    width: 38px;
+    height: 38px;
+    border: 1px solid #ccc;
+    border-radius: 50%;
+    line-height:0;
+    padding: 1px;
+    overflow: hidden;
+    margin-top: 5px;
+    margin-left: 15px;
+
+}
+.g-userlog img {
+    width: 100%;
+}
+.g-username {
+    font-size: 14px;
+    line-height: 15px;
+}
 .g-card-head i {
     float: left;
+}
+.g-float-left {
+    float: left;
+}
+.g-inline-block {
+    display: inline-block;
+}
+.g-pdr-100 {
+    padding-right: 100px;
 }
 .g-input {
     border-width: 0 0 1px 0;
@@ -31,7 +71,9 @@
     outline: none;
     width: 200px;    
 }
-
+.g-select {
+    width: 200px !important;
+}
 .g-input:focus {
     border-width: 0 0 1px 0 !important;
     box-shadow:0 0 0 0px;
@@ -74,4 +116,10 @@
 }
 .g-pointer {
     cursor: pointer;
+}
+.g-city {
+    width: 80px !important;
+}
+.g-city-input {
+    width: 120px !important;
 }
