增加员工管理

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -120,6 +120,9 @@
 .g-city {
     width: 80px !important;
 }
+.g-role {
+    min-width:200px !important ;
+}
 .g-city-input {
     width: 120px !important;
 }
